--- a/gb/13/10/8/n3981526.md
+++ b/gb/13/10/8/n3981526.md
@@ -1,14 +1,14 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/doqmyb338/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/doqmyb338/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/doqmyb338/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/doqmyb338/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/doqmyb338/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/doqmyb338/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/doqmyb338/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/doqmyb338/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/doqmyb338/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/doqmyb338/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/doqmyb338/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/doqmyb338/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/doqmyb338/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/doqmyb338/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/doqmyb338/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/doqmyb338/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/doqmyb338/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/doqmyb338/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/doqmyb338/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/doqmyb338/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/doqmyb338/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/doqmyb338/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/doqmyb338/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/doqmyb338/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/doqmyb338/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/doqmyb338/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/doqmyb338/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/doqmyb338/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/doqmyb338/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/doqmyb338/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/doqmyb338/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/doqmyb338/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/doqmyb338/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/doqmyb338/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/doqmyb338/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/doqmyb338/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/doqmyb338/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/doqmyb338/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/doqmyb338/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/doqmyb338/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/doqmyb338/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/doqmyb338/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/doqmyb338/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/doqmyb338/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/doqmyb338/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/doqmyb338/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/doqmyb338/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>大学正确理解大学助学金申请</h2>
 
 <h6></h6>
 <hr>
-	<p>【大纪元2013年10月08日讯】大学助学金每年会帮助成千上万的学生顺利完成他们的学业。但每年只有一半的学生可获得部分补助金或<ahref="https://github.com/doqmyb338/djy/blob/master/gb/tag/%E5%A5%96%E5%AD%A6%E9%87%91.md#1">奖学金</a>资助，其他学生则要依靠学生贷款、勤工俭学或其他救助方法。我们发现，每年大学新生在申请大学助学金的过程中都会出现很多错误。</p>
-<p>根据2012年统计，最受欢迎的可负担<ahref="https://github.com/doqmyb338/djy/blob/master/gb/tag/%E5%85%AC%E7%AB%8B%E5%A4%A7%E5%AD%A6.md#1">公立大学</a>，人均教育费用是3万美元；最受欢迎的私校人均费用是6万美元。基本上每位学生都需要大学助学金来帮助支付这笔费用。但申请过程中出现的错误，却使很多符合条件的学生，失去资助机会。希望此文可让学生和家长对大学助学金申请有个正确认识。</p>
+	<p>【大纪元2013年10月08日讯】大学助学金每年会帮助成千上万的学生顺利完成他们的学业。但每年只有一半的学生可获得部分补助金或<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%A5%96%E5%AD%A6%E9%87%91.md#1">奖学金</a>资助，其他学生则要依靠学生贷款、勤工俭学或其他救助方法。我们发现，每年大学新生在申请大学助学金的过程中都会出现很多错误。</p>
+<p>根据2012年统计，最受欢迎的可负担<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%85%AC%E7%AB%8B%E5%A4%A7%E5%AD%A6.md#1">公立大学</a>，人均教育费用是3万美元；最受欢迎的私校人均费用是6万美元。基本上每位学生都需要大学助学金来帮助支付这笔费用。但申请过程中出现的错误，却使很多符合条件的学生，失去资助机会。希望此文可让学生和家长对大学助学金申请有个正确认识。</p>
 <p><B>如何计算大学资助金？ </B></p>
-<p>大学助学金主要分为两种：一种是不要偿还，也可说是免费的；另一种是需要偿还的，一般都是在毕业以后才开始偿还。在免费的助学金当中也分为两种，一种是根据需要资助，另一种是根据学生特长和荣誉来发放；这其中包括补助金和<ahref="https://github.com/doqmyb338/djy/blob/master/gb/tag/%E5%A5%96%E5%AD%A6%E9%87%91.md#1">奖学金</a>两种形式。需要偿还的助学金，一般是指各类型的学生贷款，包括政府、学校、公司、私人机构的学生贷款。</p>
+<p>大学助学金主要分为两种：一种是不要偿还，也可说是免费的；另一种是需要偿还的，一般都是在毕业以后才开始偿还。在免费的助学金当中也分为两种，一种是根据需要资助，另一种是根据学生特长和荣誉来发放；这其中包括补助金和<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%A5%96%E5%AD%A6%E9%87%91.md#1">奖学金</a>两种形式。需要偿还的助学金，一般是指各类型的学生贷款，包括政府、学校、公司、私人机构的学生贷款。</p>
 <p>因大部分人申请助学金，都是申请不需要偿还的补助金，所以本文会着重说明这项补助金的申请。在申请助学金前，我们必须知道自己大学费用中家庭预计的支付额[the expected family contribution (EFC)]。EFC的算法分为两种，分别是联邦算法和机构算法，学校可选择其中任一种算法，这也就是为什么我们在同时申请不同学校时，可获得不同补助金的原因之一；而且每种计算方法每年都会有一点改动，所以不能道听涂说别人的经验而盲目跟从。例如：如果一个学生一年的费用大概3万美元,而这个家庭的EFC是8千美元，那么这个学生需要的补助金数量就是2.2万美元。</p>
 <p>但是不需要偿还的补助金一般都无法百分之一百满足需要。以上例说明，如果该学生只能申请到2万美元补助金，那么2千美元只能靠家庭负担或者学生再申请其他的助学金去支付，例如学生贷款或勤工俭学。</p>
 <p><B>申请大学助学金过程中常见的8个错误</B></p>
@@ -30,41 +30,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/doqmyb338/djy/blob/master/gb/21/6/20/n13035239.md#1">双语AI智能教育机器人：ROYBI 孩子爱不释手</a></li>
-<li><a href="https://github.com/doqmyb338/djy/blob/master/gb/21/3/24/n12831757.md#1">【爸妈必修课】资优教育从抹地板、做家事开始</a></li>
-<li><a href="https://github.com/doqmyb338/djy/blob/master/gb/21/3/9/n12800226.md#1">【爸妈必修课】学习打破鸿沟 开发潜能</a></li>
-<li><a href="https://github.com/doqmyb338/djy/blob/master/gb/21/2/24/n12772768.md#1">【爸妈必修课】全家交流育儿经 达成教养共识</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/6/20/n13035239.md#1">双语AI智能教育机器人：ROYBI 孩子爱不释手</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/3/24/n12831757.md#1">【爸妈必修课】资优教育从抹地板、做家事开始</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/3/9/n12800226.md#1">【爸妈必修课】学习打破鸿沟 开发潜能</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/2/24/n12772768.md#1">【爸妈必修课】全家交流育儿经 达成教养共识</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/9/n10899776.md#1" target="_blank">林辉：姚依林回忆“一二九运动”证实三件事</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/16/n11118029.md#1" target="_blank">阿肯色州参议院通过决议案 制止中共强摘器官</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/2/21/n11061288.md#1" target="_blank">林辉：毁黄帝炎帝陵 中共与中华民族水火不容</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/4/12/n7547010.md#1" target="_blank">人生绝望疑无路 修法轮功获重生</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/doqmyb338/djy/blob/master/gb/21/12/15/n13439208.md#1">冬至一阳生 吃什么食物特别迎好运？</a></li>
-<li><a href="https://github.com/doqmyb338/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
-<li><a href="https://github.com/doqmyb338/djy/blob/master/gb/21/12/11/n13431562.md#1">【品读宋词】末世壮歌 文天祥的《酹江月》</a></li>
-<li><a href="https://github.com/doqmyb338/djy/blob/master/gb/21/12/15/n13439755.md#1">【百年真相】秦城奇闻 冯基平被关进自建的监狱</a></li>
-<li><a href="https://github.com/doqmyb338/djy/blob/master/gb/21/12/17/n13443991.md#1">【未解之谜】颠覆认知的物理实验</a></li>
-<li><a href="https://github.com/doqmyb338/djy/blob/master/gb/21/12/22/n13452239.md#1">【军事热点】俄罗斯核能力轰炸机过境白俄罗斯 向北约示威</a></li>
-<li><a href="https://github.com/doqmyb338/djy/blob/master/gb/21/12/21/n13450827.md#1">【拍案惊奇】王沪宁好意思批王力宏？彭帅脸色差</a></li>
-<li><a href="https://github.com/doqmyb338/djy/blob/master/gb/21/12/21/n13451391.md#1">【新闻看点】上海警方公开招标 操控境外社媒</a></li>
-<li><a href="https://github.com/doqmyb338/djy/blob/master/gb/21/12/20/n13449122.md#1">病愈复出被问好友王力宏 林书豪当场愣住</a></li>
-<li><a href="https://github.com/doqmyb338/djy/blob/master/gb/21/12/21/n13451336.md#1">“五毛愤青聚集地”铁血社区将被永久关闭</a></li>
-<li><a href="https://github.com/doqmyb338/djy/blob/master/gb/21/12/20/n13449250.md#1">王力宏发文道歉 李靓蕾回应媒体“不会告了”</a></li>
-<li><a href="https://github.com/doqmyb338/djy/blob/master/gb/21/12/20/n13449122.md#1">病愈复出被问好友王力宏 林书豪当场愣住</a></li>
-<li><a href="https://github.com/doqmyb338/djy/blob/master/gb/21/12/20/n13447910.md#1">王力宏发文道歉 宣布暂时退出演艺圈</a></li>
-<li><a href="https://github.com/doqmyb338/djy/blob/master/gb/21/12/20/n13449250.md#1">王力宏发文道歉 李靓蕾回应媒体“不会告了”</a></li>
-<li><a href="https://github.com/doqmyb338/djy/blob/master/gb/21/12/21/n13451501.md#1">吴尊被网友留言提醒：千万不要让人掉眼镜啊</a></li>
-<li><a href="https://github.com/doqmyb338/djy/blob/master/gb/21/12/21/n13449553.md#1">章子怡与汪峰悄悄退出共同投资公司 引猜测</a></li>
-<li><a href="https://github.com/doqmyb338/djy/blob/master/gb/21/12/21/n13449965.md#1">黄豆芽、绿豆芽哪个好？这碗豆芽汤解毒、消水肿</a></li>
-<li><a href="https://github.com/doqmyb338/djy/blob/master/gb/21/12/21/n13449697.md#1">冬天的排毒菜 一碗大白菜汤养肠胃、补元气</a></li>
-<li><a href="https://github.com/doqmyb338/djy/blob/master/gb/21/12/18/n13445254.md#1">1种营养素 可能抑制Omicron变种？你经常喝</a></li>
-<li><a href="https://github.com/doqmyb338/djy/blob/master/gb/21/12/21/n13450771.md#1">纽约富人的八个共同点</a></li>
-<li><a href="https://github.com/doqmyb338/djy/blob/master/gb/21/12/20/n13448121.md#1">美国龙卷风吹走两名婴儿 双双奇迹生还</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616638.md#1">【十字路口】蓬佩奥到访台湾意义重大？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614888.md#1">赴韩拍戏皮肤长满红斑 范冰冰素颜照吓坏网友</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613932.md#1">【健康1+1】染Omicron出现脑雾 一方法2周解除</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/doqmyb338/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/doqmyb338/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/13/10/8/n3981526.htm">大学正确理解大学助学金申请</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/13/10/8/n3981526.htm">大学正确理解大学助学金申请</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/doqmyb338/djy/blob/master/gb/13/10/8/n3981526.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/doqmyb338/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/doqmyb338/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/doqmyb338/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/doqmyb338/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/doqmyb338/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/doqmyb338/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/doqmyb338/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/doqmyb338/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/doqmyb338/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/doqmyb338/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/doqmyb338/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/doqmyb338/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/doqmyb338/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/doqmyb338/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/doqmyb338/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/doqmyb338/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/doqmyb338/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/doqmyb338/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/doqmyb338/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/doqmyb338/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/doqmyb338/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/doqmyb338/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/doqmyb338/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/doqmyb338/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/doqmyb338/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/doqmyb338/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/doqmyb338/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/doqmyb338/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/doqmyb338/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/doqmyb338/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/doqmyb338/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/doqmyb338/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/doqmyb338/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/doqmyb338/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/doqmyb338/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/doqmyb338/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/doqmyb338/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/doqmyb338/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/doqmyb338/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/doqmyb338/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/doqmyb338/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/doqmyb338/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/doqmyb338/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/doqmyb338/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/doqmyb338/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/doqmyb338/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/doqmyb338/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/doqmyb338/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/13/10/8/n3981526.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
